# dbmaters

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  build.rs
.github/workflows/: release.yml
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/api/dbmaters/: all.html  fn.create_and_migrate.html  index.html  sidebar-items.js
docs/api/dbmaters/error/: enum.DbMatersError.html  index.html  sidebar-items.js
docs/api/search.desc/dbmaters/: dbmaters-desc-0-.js
docs/api/src/dbmaters/: error.rs.html  lib.rs.html
docs/api/trait.impl/core/fmt/: trait.Debug.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
golang/: go.mod  go.sum  main.go
src/: error.rs  lib.rs
