[package]
name = "dbmaters"
version = "0.1.0"
edition = "2021"
description = "A Rust library for database migrations using dbmate"
authors = ["John Doe <john.doe@example.com>"]
license = "MIT"
repository = "https://github.com/dbmate/dbmaters"
links = "dbmaters"

[lib]
name = "dbmaters"
path = "src/lib.rs"

[dependencies]


[build-dependencies]
cc = "1.0"
